--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Your awesome title
-lang: en
-description: Write an awesome description for your new site here
+title: LG Open Source
+lang: kor
+description: LG Open Source Guide
 
 remote_theme: rundocs/jekyll-rtd-theme
 
