--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-base_url: /guide_test
+base_url: /guide
 title: LG Open Source
 lang: kor
 description: LG Open Source Guide
 
-remote_theme: LGE-OSS/jekyll-rtd-theme@v1
+remote_theme: LGE-OSS/jekyll-rtd-theme
 
 show_sorted: false
 addons_branch: true
